apps/prod/patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1  
  template:
    spec:
      containers:
        - name: api
          # In Prod, use real registry image. Update this via CI/CD.
          image: 609365818761.dkr.ecr.ap-northeast-2.amazonaws.com/trendlens/api:v0.4.0-4 
          imagePullPolicy: IfNotPresent # Always / Never
