apps/prod/patch-selenium-antiaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - selenium-chrome
              topologyKey: "kubernetes.io/hostname"
