apps/prod/patch-selenium-nodeselector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND
